--- a/API/T_ShirtStore/T_ShirtStore.WebApi/T_ShirtStore.WebApi/Properties/launchSettings.json
+++ b/API/T_ShirtStore/T_ShirtStore.WebApi/T_ShirtStore.WebApi/Properties/launchSettings.json
@@ -17,7 +17,7 @@
     },
     "T_ShirtStore.WebApi": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
